@@ -1,5 +1,11 @@
 2008-04-05  Bruno Haible  <bruno@clisp.org>
 
+	Use libtool versioning.
+	* lib/Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): New macros.
+	(libunistring_la_LDFLAGS): Pass -version-info option.
+
+2008-04-05  Bruno Haible  <bruno@clisp.org>
+
 	* gnulib-m4/gnulib-cache.m4: New file, generated by gnulib-tool.
 
 	* autogen.sh: New file.
